<resources>
    <string name="app_name">Jantaa</string>
    <string name="name_app">Jantaa</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="environment"></string>
    <string name="ok">OK</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="an_otp_will_be_sent_to_the_number">An OTP will be sent to the number</string>
    <string name="send_otp">SEND OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_amp_proceed"><![CDATA[VERIFY & PROCEED]]></string>
    <string name="didn_t_received_otp">Did\'nt received OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="sign_up">Sign Up</string>
    <string name="aadhar_number">Aadhar number</string>
    <string name="full_name">Full Name</string>
    <string name="mother_father_name">Mother/Father name</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="tahsil_village">Village</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="dob">DoB</string>
    <string name="blood_group">Blood Group</string>
    <string name="marital_status">Marital Status</string>
    <string name="employment_state">Employment State</string>
    <string name="if_private_mention_work">If Private mention work</string>
    <string name="mention_other_work"> Mention Other work</string>
    <string name="caste">Caste</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="identity_card">Identity Card</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="upload_aadhar_card">Upload aadhaar card</string>
    <string name="reupload_aadhar_card">Re Upload aadhaar card</string>
    <string name="upload_front_aadhar_card">Upload Front Side Aadhaar card</string>
    <string name="upload_back_aadhar_card">Upload Back Side Aadhaar card</string>
    <string name="i_accept_privacy_terms">
        I accept <a href="https://adminjanataa.blogspot.com/2023/06/jantaa-application-privacy-policy.html">Privacy Policy,</a> <a href="https://adminjanataa.blogspot.com/2023/06/jantaa-application-terms-conditions.html">Terms &amp; conditions</a>  of Jantaa App.
    </string>
    <string name="terms_app">Terms &amp; Conditions</string>
    <string name="privacy_app">Privacy Policy</string>
    <string name="submit">Submit</string>
    <string name="mudhiraju">Mudhiraju</string>
    <string name="yadav">Yadav</string>
    <string name="munnurkapu">Munnurkapu</string>
    <string name="velama">Velama</string>
    <string name="uppara">Uppara</string>
    <string name="goud">Goud</string>
    <string name="reddy">Reddy</string>
    <string name="padmashali">Padmashali</string>
    <string name="muslim">Muslim</string>
    <string name="kurma">Kurma</string>
    <string name="banjara">Banjara</string>
    <string name="gangaputra">Gangaputra</string>
    <string name="kummari">Kummari</string>
    <string name="mala">Mala</string>
    <string name="select_caste">Select Caste</string>
    <string name="thank_you_for_registering">Thank you for registering</string>
    <string name="we_ve_generated_an_identity_card_for_you_with_the_details_provided_by_you">We have generated an Identity card for you with the details provided by you.</string>
    <string name="registration_number">Registration number</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="id_hint">*This Identity card is generated online as membership for AppName</string>
    <string name="next">Next</string>
    <string name="join_now">Join Now!</string>
    <string name="join_with_our_three_app_features_you_like">Join with our three app features you like</string>
    <string name="community_chat">Community</string>
    <string name="matrimony">Matrimony</string>
    <string name="blood_donation">Blood Donation</string>
    <string name="profile">Profile</string>
    <string name="profiledetails">Profile Details</string>
    <string name="enable_this_feature">Enable this feature</string>
    <string name="to_join_the_community_chat_tap_the_button_below_to_enable_the_community_chat_feature">To join the community chat tap the button below to enable the community chat feature</string>
    <string name="enable_feature">ENABLE FEATURE</string>
    <string name="to_enable_meeting_feature">To join the Meeting chat tap the button below to enable the Meeting chat feature</string>
    <string name="community_groups_guide_lines">Community groups guide lines</string>
    <string name="no_abuse_texts_should_be_posted_shared">No abuse texts should be posted/shared.</string>
    <string name="no_abuse_videos_should_be_posted_shared">No abuse videos should be posted/shared.</string>
    <string name="if_any_abuse_text_or_video_is_found_with_user_s_details_that_user_will_bewarned_for_first_time_if_it_repeats_user_will_be_disabled_from_communitychat_facility_or_respective_group">If any abuse text or video is found with user’s details that user will bewarned for first time. If it repeats user will be disabled from communitychat facility or respective group.</string>
    <string name="if_any_reports_found_on_users_posts_shared_content_adminauthorized_person_will_take_disciplinary_action_on_user">If any reports found on user\'s posts/shared content admin/authorized person will take disciplinary action on user.</string>
    <string name="agree_amp_continue"><![CDATA[Agree & Continue]]></string>
    <string name="i_disagree">I Disagree</string>
    <string name="about">About</string>
    <string name="join">JOIN</string>
    <string name="joined">Joined</string>
    <string name="members">Members</string>
    <string name="other_groups">Other Groups</string>
    <string name="write_post_hint">What\'s on your mind?</string>
    <string name="view_all">View All</string>
    <string name="post">POST</string>
    <string name="write_something">Write something..</string>
    <string name="choose_media">Choose Media</string>
    <string name="see_all">See all</string>
    <string name="write_your_comment_here">Write your comment here...</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="report">Report</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_alert">Are you sure to delete this post?</string>
    <string name="comment_alert">Are you sure to delete this comment?</string>
    <string name="join_alert">Are you sure to join this group?</string>
    <string name="block_alert">Are you sure to block Username?</string>
    <string name="clear_chat_alert">Are you sure to clear Chat?</string>
    <string name="update_changes_alert">Do you want to update changes?</string>
    <string name="call_alert">Call Mr.Username regarding blood donation?</string>
    <string name="blood_donation_remove_account_alert">Are you sure  want to Remove your account from blood donation?</string>
    <string name="community_chat_remove_account_alert">Are you sure  want to Remove your account from Community Chat?</string>
    <string name="matrimony_remove_account_alert">Are you sure  want to Remove your account from Matrimony?</string>
    <string name="logout_alert">Are you sure  want to Logout?</string>
    <string name="delete_user_alert">Are you sure want to Delete your account?</string>
    <string name="remove_request_alert">Are you sure  want to remove your request?</string>
    <string name="request_post_alert">Request posted successfully</string>
    <string name="yes">Yes</string>
    <string name="cancel">cancel</string>
    <string name="no">No</string>
    <string name="add_more_media">ADD MORE MEDIA</string>
    <string name="view">View</string>
    <string name="search_follower">Search Followers...</string>
    <string name="report_post">Report Post</string>
    <string name="don_t_worry_you_are_safe_with_us_this_report_will_never_be_notified_to_the_concern_person_regarding_your_safety_this_report_will_be_anonymous">Don\'t worry you are safe with us! This report will never be notified to the concern person. Regarding your safety this report will be anonymous.</string>
    <string name="user_id">USER ID</string>
    <string name="reason">Reason</string>
    <string name="comments">comments</string>
    <string name="update">UPDATE</string>
    <string name="editpost">Edit Post</string>
    <string name="group_meeting">Group Meeting</string>
    <string name="upcoming_meets">Upcoming Meets</string>
    <string name="recent_meetings">Recent Meetings</string>
    <string name="held_on">Held on -</string>
    <string name="recent">Recent</string>
    <string name="earlier">Earlier</string>
    <string name="notifications">Notifications</string>
    <string name="groupmembers">Group Members</string>
    <string name="allmembers">All Members</string>
    <string name="to_join_the_community_chat_tap_the_button_below_to_enable_the_matrimony_feature">To join the community chat tap the button below to enable the matrimony feature</string>
    <string name="this_is_only_to_provide_a_platform_to_get_married_appname_is_not_responsible_for_any_violation_of_personal_information">This is only to provide a platform to get married. AppName is not responsible for any violation of personal information.</string>
    <string name="friend_requests_should_be_initiated">Friend requests should be initiated.</string>
    <string name="after_accepting_friend_request_full_profile_information_as_per_registration_details_will_be_visible_to_both">After accepting friend request, full profile information (as per registration details) will be visible to both.</string>
    <string name="you_can_get_any_required_information_on_your_personal_at_your_own_risk">You can get any required information on your personal at your own risk.</string>
    <string name="no_charges_will_be_collected_at_appname_for_matrimony_process">No charges will be collected at AppName for matrimony process.</string>
    <string name="find_the_perfect_match">Find the perfect match</string>
    <string name="register_free">Register Free!</string>
    <string name="religion">RELIGION</string>
    <string name="mother_tongue">MOTHER TONGUE</string>
    <string name="religion_division">RELIGION DIVISION</string>
    <string name="country_living_in">COUNTRY LIVING IN</string>
    <string name="state_living_in">STATE LIVING IN</string>
    <string name="city_living_in">CITY LIVING IN</string>
    <string name="registration">Registration</string>
    <string name="height">HEIGHT</string>
    <string name="height_in_cm">Height in cm</string>
    <string name="physical_status">Physical Status</string>
    <string name="education">Education</string>
    <string name="employed_in">EMPLOYED IN</string>
    <string name="annual_income">Annual Income</string>
    <string name="star">Star</string>
    <string name="partner_preferences">Partner Preferences</string>
    <string name="basic_preferences">Basic Preferences</string>
    <string name="age">Age</string>
    <string name="a_positive">A+</string>
    <string name="b_positive">B+</string>
    <string name="ab_positive">AB+</string>
    <string name="o_positive">O+</string>
    <string name="a_negative">A-</string>
    <string name="b_negative">B-</string>
    <string name="ab_negative">AB-</string>
    <string name="o_negative">O-</string>
    <string name="no_recent_meetings">No Recent Meetings</string>
    <string name="no_upcoming_meetings">No Upcoming Meetings</string>
</resources>