<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.main.community.GroupMeetingFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/meetingCLS"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/backIV"
        android:layout_width="@dimen/margin_24x"
        android:layout_height="@dimen/margin_24x"
        android:layout_marginStart="@dimen/padding_16x"
        android:layout_marginTop="@dimen/padding_16x"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/textBlack" />

    <TextView
        android:id="@+id/groupMeetingTV"
        style="@style/TextView.Headline6.Lexend.SemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_meeting"
        app:layout_constraintBottom_toBottomOf="@id/backIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backIV" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_16x"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupMeetingTV">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/upcomingMeetingTV"
                style="@style/TextView.Body1.Lexend.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_16x"
                android:text="@string/upcoming_meets"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcomingMeetingRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_16x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upcomingMeetingTV" />

            <TextView
                android:id="@+id/noUpComingMeetingTV"
                style="@style/TextView.Body2.Lexend.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_upcoming_meetings"
                android:textColor="@color/textBlack"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/view1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upcomingMeetingTV" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_8x"
                android:layout_marginTop="@dimen/margin_24x"
                android:background="@color/lightGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upcomingMeetingRV" />


            <TextView
                android:id="@+id/recentMeetingTV"
                style="@style/TextView.Body1.Lexend.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_16x"
                android:layout_marginTop="@dimen/margin_24x"
                android:text="@string/recent_meetings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recentMeetingRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_16x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recentMeetingTV" />


            <TextView
                android:id="@+id/noRecentMeetingTV"
                style="@style/TextView.Body2.Lexend.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_recent_meetings"
                android:textColor="@color/textBlack"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recentMeetingTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
    <include
        android:id="@+id/meetingEnableLayout"
        layout="@layout/feature_enable_layout"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>